@@ -1,7 +1,7 @@
 /** @file index_utils.h
  * @brief utility functions for indexing testcase data
  */
-/* Copyright (C) 2005,2007 Olly Betts
+/* Copyright (C) 2005,2007,2013 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -49,6 +49,8 @@ class FileIndexer {
     }
 
     Xapian::Document next();
+
+    void index_to(Xapian::WritableDatabase & db);
 };
 
 #endif /* XAPIAN_HGUARD_INDEX_UTILS_H */
